# SpicySpecies

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/lang/: en.json  fr.json
src-tauri/src/: calc.rs  files.rs  main.rs
